--- a/.gitignore
+++ b/.gitignore
@@ -120,6 +120,9 @@ venv.bak/
 # mkdocs documentation
 /site
 
+# django staticfiles
+/static
+
 # mypy
 .mypy_cache/
 .dmypy.json
@@ -127,3 +130,7 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+/db.sqlite3
+
+# Idea
+.idea/
